# libre-mp

./: .gitignore  LICENSE  README.md  archtest.pcapng  archtest10.pcapng  archtest11.pcapng  archtest4.pcapng  archtest5.pcapng  archtest6.pcapng  archtest7.pcapng  archtest9.pcapng  archtesting.pcapng  archtesting2.pcapng  backup.rs  check_tile_gap.py  check_timeline.py  clean_epson.hex  compare_dump.py  debug_run.py  definitive_test.py  epson_arch_stuff.txt  extract_headers.py  generate_python_batch.py  hybrid_test.py  inspect_python.py  inspect_windows.py  main.py  pinpoint_test.py  raw_windows_test.py  surgical_test.py  test.pcap  test2.pcap  test_mss.py  tls.pcapng
Junk/: analyze_pcap.py  check_tcp_segmentation.py  continuous_test.py  dump_pcap.py  hex_diff.py  isolated_test.py  jpeg_swap_test.py  main.py  map_bin.py  minimal_test.py  netsh_out.txt  netsh_output.txt  netsh_temp.txt  parse_regions.py  replay.py  replay_test.py  requirements.txt  sustained_test.py  test_eemp.py  test_parser.rs  test_wifi.rs  timestamp_test.py
Junk/cpp/: main.cpp  (+6 more)
Rust/: Cargo.toml  README.md  err.txt  err2.txt  projectors.txt
Rust/src/: capture.rs  hex.rs  main.rs  protocol.rs  template.rs  wifi.rs
cpp/: CMakeLists.txt  client.cpp  client.hpp  config.hpp  payloads.cpp  payloads.hpp  video_streamer.cpp
epson_projector/: __init__.py  client.py  config.py  payloads.py  video_streamer.py  wifi.py
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  error.txt  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/protocol/: client.rs  config.rs  payloads.rs  streamer.rs
(+36 files in other folders)
