[package]
name = "frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
xcap = "0.9.3"
image = "0.25.0"
byteorder = "1.5.0"
hex = "0.4.3"

